random-app01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactapp-ingress
  namespace: nginx-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      #    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: randomapp01.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-application
            port:
              number: 8080
